--- a/common-service/pom.xml
+++ b/common-service/pom.xml
@@ -77,6 +77,9 @@
             <artifactId>mapstruct</artifactId>
             <scope>provided</scope>
         </dependency>
+        <dependency><groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-starter-alibaba-sentinel</artifactId>
+            <scope>provided</scope></dependency>
     </dependencies>
 
 
