--- a/common-service/src/main/filters/application-filter-dev.properties
+++ b/common-service/src/main/filters/application-filter-dev.properties
@@ -19,3 +19,11 @@ spring.cloud.loadbalancer.cache.ttl=5s
 preserved.heart.beat.interval=3000
 preserved.heart.beat.timeout=3000
 preserved.ip.delete.timeout=5000
+
+sentinel.transport.dashboard=localhost:8888
+sentinel.transport.port.user-service=8010
+sentinel.transport.port.order-service=8020
+sentinel.transport.port.product-service=8030
+sentinel.transport.port.gateway-service=8040
+
+sentinel.nacos.group-id=sentinel
