--- a/user-service/src/main/resources/application.yml
+++ b/user-service/src/main/resources/application.yml
@@ -1,7 +1,11 @@
-spring:
-  application:
-    name: user-service
 server:
   port: ${user-service.port}
-jwt:
-  secret-key: 2ad5af5f-85cd-4423-b443-7a4ec30072f7
+
+spring:
+  cloud:
+    sentinel:
+      transport:
+        port: ${sentinel.transport.port.user-service}
+        dashboard: ${sentinel.transport.dashboard}
+#jwt:
+#  secret-key: 2ad5af5f-85cd-4423-b443-7a4ec30072f7
