--- a/api-service/src/main/resources/application-dev.yml
+++ b/api-service/src/main/resources/application-dev.yml
@@ -1,13 +1,33 @@
 spring:
-  #  数据源配置可以移至 Nacos 配置中心：common-service-dev.yml
-  datasource:
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/nacos-service?serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=utf8&useSSL=true
-    username: root
-    password: 123456
-  jackson:
-    default-property-inclusion: non_null
+#  #  数据源配置可以移至 Nacos 配置中心：common-service-dev.yml
+#  datasource:
+#    driver-class-name: com.mysql.cj.jdbc.Driver
+#    url: jdbc:mysql://localhost:3306/nacos-service?serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=utf8&useSSL=true
+#    username: root
+#    password: 123456
+#  jackson:
+#    default-property-inclusion: non_null
   cloud:
+    sentinel:
+      datasource:
+        flow:
+          nacos:
+            server-addr: ${nacos.server-address}
+            username: ${nacos.username}
+            password: ${nacos.password}
+            group-id: ${sentinel.nacos.group-id}
+            rule-type: flow
+            data-id: ${spring.application.name}-flow-rules
+            data-type: json
+        degrade:
+          nacos:
+            server-addr: ${nacos.server-address}
+            username: ${nacos.username}
+            password: ${nacos.password}
+            group-id: ${sentinel.nacos.group-id}
+            rule-type: degrade
+            data-id: ${spring.application.name}-degrade-rules
+            data-type: json
     openfeign:
       client:
         defaultConfig: fast
@@ -37,6 +57,6 @@ spring:
               delete:
                 timeout: ${preserved.ip.delete.timeout}
 mybatis-plus:
-  type-aliases-package: top.mqxu.cloud.order.entity,top.mqxu.cloud.product.entity,top.mqxu.cloud.user.entity
+  type-aliases-package: com.bhui.cloud.order.entity,com.bhui.cloud.product.entity,com.bhui.cloud.user.entity
 
 
