--- a/product-service/src/main/resources/application.yml
+++ b/product-service/src/main/resources/application.yml
@@ -1,2 +1,8 @@
 server:
   port: ${product-service.port}
+spring:
+  cloud:
+    sentinel:
+      transport:
+        port: ${sentinel.transport.port.product-service}
+        dashboard: ${sentinel.transport.dashboard}
