--- a/user-service/pom.xml
+++ b/user-service/pom.xml
@@ -21,6 +21,11 @@
             <artifactId>api-service</artifactId>
             <version>1.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-configuration-processor</artifactId>
+            <optional>true</optional>
+        </dependency>
     </dependencies>
 
     <build>
