--- a/user-service/src/main/resources/bootstrap.yml
+++ b/user-service/src/main/resources/bootstrap.yml
@@ -9,3 +9,10 @@ spring:
         server-addr: ${nacos.server-address}
         group: ${nacos.group}
         file-extension: ${nacos.file-extension}
+        name: cipher-aes-user-service-${spring.profiles.active}.yaml
+        username: ${nacos.username}
+        password: ${nacos.password}
+        shared-configs:
+          - data-id: cipher-aes-common-service-${spring.profiles.active}.yaml
+            group: ${nacos.group}
+            refresh: true
